--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
-
 plugins{
-id 'war'
+    id 'war'
 }
+
+apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'eclipse'
+mainClassName = 'App'
 
 //Include the jetty runner into the build/server folder
 task copyToLib(type: Copy) {
@@ -25,9 +29,10 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compileOnly 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
     testCompile 'junit:junit:4.12'
+    compile 'postgresql:postgresql:9.1-901-1.jdbc4'
 }
 
 repositories {
     jcenter()
-mavenCentral()
+    mavenCentral()
 }
