--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,47 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
+    }
+}
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin:'war'
 
-plugins{
-id 'war'
+
+bootJar {
+    baseName = 'eyeTravel[root]'
+    version =  '0.1.0'
 }
 
 //Include the jetty runner into the build/server folder
 task copyToLib(type: Copy) {
-    into "$buildDir/server"				//Default $buildDir is build/
-    from(configurations.compileOnly) {	//Note the use of the name of dependency 
-        include "jetty-runner*"			// configuration "compileOnly"
-        rename { String fileName -> 		//Forget the version # from filename
-"jetty-runner.jar"   
+    into "$buildDir/server"                //Default $buildDir is build/
+    from(configurations.compileOnly) {    //Note the use of the name of dependency 
+        include "jetty-runner*"            // configuration "compileOnly"
+        rename { String fileName ->         //Forget the version # from filename
+"jetty-runner.jar"
         }
     }
 }
 
-//Add to task stage that Heroku to prepare deployment
 task stage {
     dependsOn clean, war, copyToLib 
 }
-war.mustRunAfter clean		
+war.mustRunAfter clean
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    compileOnly 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
+    compile 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
     testCompile 'junit:junit:4.12'
+   compile("org.springframework.boot:spring-boot-starter-web")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 repositories {
