--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,20 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
     }
 }
+
+plugins{
+    id 'war'
+}
 apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin:'war'
-
+mainClassName = 'app/App'
 
 bootJar {
-    baseName = 'eyeTravel[root]'
+    baseName = 'gs-rest-service'
     version =  '0.1.0'
 }
 
@@ -33,11 +39,14 @@ task stage {
 }
 war.mustRunAfter clean
 
+war {
+    enabled = true
+}
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
     testCompile 'junit:junit:4.12'
    compile("org.springframework.boot:spring-boot-starter-web")
