--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ war.mustRunAfter clean
 war {
     enabled = true
 }
+jar{
+    enabled = true
+}
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
