--- a/build.gradle
+++ b/build.gradle
@@ -1,59 +1,31 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
-    }
-}
-
 plugins{
-    id 'war'
-}
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-mainClassName = 'app/App'
-
-bootJar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
+id 'war'
 }
 
 //Include the jetty runner into the build/server folder
 task copyToLib(type: Copy) {
-    into "$buildDir/server"                //Default $buildDir is build/
-    from(configurations.compileOnly) {    //Note the use of the name of dependency 
-        include "jetty-runner*"            // configuration "compileOnly"
-        rename { String fileName ->         //Forget the version # from filename
-"jetty-runner.jar"
+    into "$buildDir/server"				//Default $buildDir is build/
+    from(configurations.compileOnly) {	//Note the use of the name of dependency 
+        include "jetty-runner*"			// configuration "compileOnly"
+        rename { String fileName -> 		//Forget the version # from filename
+"jetty-runner.jar"   
         }
     }
 }
 
+//Add to task stage that Heroku to prepare deployment
 task stage {
     dependsOn clean, war, copyToLib 
 }
-war.mustRunAfter clean
+war.mustRunAfter clean		
 
-war {
-    enabled = true
-}
-jar{
-    enabled = true
-}
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 dependencies {
-    compile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+    compileOnly 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
     testCompile 'junit:junit:4.12'
-   compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.springframework.boot:spring-boot-starter-web:2.0.1.RELEASE")
+
 }
 
 repositories {
