--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-mainClassName = 'App'
+mainClassName = 'app/App'
 
 //Include the jetty runner into the build/server folder
 task copyToLib(type: Copy) {
