--- a/build.gradle
+++ b/build.gradle
@@ -17,30 +17,20 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 mainClassName = 'app/App'
 
-//Include the jetty runner into the build/server folder
-task copyToLib(type: Copy) {
-    into "$buildDir/server"				//Default $buildDir is build/
-    from(configurations.compileOnly) {	//Note the use of the name of dependency 
-        include "jetty-runner*"			// configuration "compileOnly"
-        rename { String fileName -> 		//Forget the version # from filename
-"jetty-runner.jar"   
-        }
+task stage(type: Copy, dependsOn: [clean, build]) {
+    from jar.archivePath
+    into project.rootDir
+    rename {
+        'app.jar'
     }
 }
+stage.mustRunAfter(clean)
+
+clean << {
+    project.file('app.jar').delete()
+}
 
 
-//Add to task stage that Heroku to prepare deployment
-task stage {
-    dependsOn clean, war, copyToLib 
-}
-war.mustRunAfter clean		
-
-jar{
-    enabled = true
-}
-war {
-    enabled = true
-}
 dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compileOnly 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
