--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,33 @@
 buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
     }
 }
-plugins{
-    id 'war'
-}
 
-
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-mainClassName = 'app/App'
+apply plugin: 'java'
 
-//Include the jetty runner into the build/server folder
-task copyToLib(type: Copy) {
-    into "$buildDir/server"				//Default $buildDir is build/
-    from(configurations.compileOnly) {	//Note the use of the name of dependency 
-        include "jetty-runner*"			// configuration "compileOnly"
-        rename { String fileName -> 		//Forget the version # from filename
-"jetty-runner.jar"   
-        }
-    }
+
+bootJar {
+    baseName = 'eyeTravel'
 }
 
-
-//Add to task stage that Heroku to prepare deployment
-task stage {
-    dependsOn clean, war, copyToLib 
+repositories {
+	jcenter()
+	mavenCentral()
 }
-war.mustRunAfter clean		
 
 dependencies {
-    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    compileOnly 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
     testCompile 'junit:junit:4.12'
-    compile 'postgresql:postgresql:9.1-901-1.jdbc4'
-    compile("org.springframework.boot:spring-boot-starter-web")
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.springframework.session:spring-session-core:2.0.2.RELEASE'
+	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-jar{
-    enabled = true
-}
-war {
-   enabled = true
-}
-repositories {
-    jcenter()
-    mavenCentral()
-}
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean 
