--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
     }
 }
@@ -17,15 +17,16 @@ bootJar {
 }
 
 repositories {
-	jcenter()
-	mavenCentral()
+    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile 'org.springframework.session:spring-session-core:2.0.2.RELEASE'
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'org.springframework.session:spring-session-core:2.0.2.RELEASE'
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
 task stage(dependsOn: ['build', 'clean'])
